--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: iturki
+  github: iturki/saudiopendata
   instagram:
   linkedin:
   pinterest:
